--- a/env.js.example
+++ b/env.js.example
@@ -1,1 +1,1 @@
-var host_be ="http://localhost:821/www/kampus/20231/5pagia/perpus/perpus_backend/";
+var host_be ="http://localhost/project_be_kalian/";
